--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "dependencies": {
     "bcrypt": "^5.1.1",
     "mongodb": "^6.8.0",
-    "next": "14.2.8",
+    "next": "^14.2.8",
     "next-auth": "^4.24.7",
     "react": "^18",
     "react-dom": "^18",
