--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "bcrypt": "^5.1.1",
+    "emailjs-com": "^3.2.0",
     "framer-motion": "^11.5.4",
     "mongodb": "^6.8.1",
     "next": "^14.2.8",
