--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@tanstack/react-query": "^5.56.2",
+    "@tanstack/react-query-devtools": "^5.56.2",
     "apexcharts": "^3.53.0",
     "axios": "^1.7.7",
     "bcrypt": "^5.1.1",
@@ -19,6 +21,7 @@
     "next-auth": "^4.24.7",
     "react": "^18",
     "react-apexcharts": "^1.4.1",
+    "react-data-table-component": "^7.6.2",
     "react-dom": "^18",
     "react-icons": "^5.3.0",
     "react-tabs": "^6.0.2",
