--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "mongodb": "^6.8.1",
     "next": "^14.2.8",
     "next-auth": "^4.24.7",
+    "query-string": "^9.1.0",
     "react": "^18",
     "react-apexcharts": "^1.4.1",
     "react-data-table-component": "^7.6.2",
